--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,9 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:focusable="true"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#FEFEFE"
@@ -18,15 +21,15 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:id="@+id/rocket_icon"
-                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
                 />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/rocket_name"
-                android:layout_toRightOf="@+id/rocket_icon"
+                android:layout_toEndOf="@+id/rocket_icon"
                 android:layout_alignParentTop="true"
                 android:textSize="30sp"
                 />
@@ -34,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/launch_date"
-                android:layout_toRightOf="@+id/rocket_icon"
+                android:layout_toEndOf="@+id/rocket_icon"
                 android:layout_below="@+id/rocket_name"
                 />
             <TextView
@@ -43,7 +46,7 @@
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:id="@+id/details"
-                android:layout_toRightOf="@+id/rocket_icon"
+                android:layout_toEndOf="@+id/rocket_icon"
                 android:layout_below="@+id/launch_date"
                 />
         </RelativeLayout>
